--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>BOT | HOME</title>
 	<link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 <nav class="menu">
 	<ul>
 		<li><a href="">HOME</li></a>
+		<li><a href="" onclick="void1()">LOGIN</a></li>
 	</ul>
 </nav>
 	<img class="icon-bot"src="https://cdn.discordapp.com/attachments/821096180746420265/868886791334277170/d302c5ec5a48fc0276ff99f6098512a4.jpg" alt="FOTO DO BOT LINK">
 	<button class="me-add"><a href="LINK PRA ADD O BOT">Me Adicione</a></button>
+
+<script>
+	function void1(){
+		confirm(`Ainda não disponivel`)
+	}
+</script>
+
 </body>
 </html>
